fix: delete shrink of element on small resolution

--- a/blocks/donation-form/__custom-check/donation-form__custom-check.css
+++ b/blocks/donation-form/__custom-check/donation-form__custom-check.css
@@ -7,6 +7,7 @@
   height: 25px;
   margin-right: 9px;
   width: 25px;
+  flex-shrink: 0;
 }
 
 .donation-form__check:checked + .donation-form__custom-check {
